--- a/login_form.html
+++ b/login_form.html
@@ -5,12 +5,41 @@
         <title>Setmore Login</title>
     </head>
     <style>
-        
+        input{
+            width: 15%;
+            padding: 10px;
+            margin: 10px 5px;
+            border: 4px solid #ccc;
+            border-radius: 500px;
+            background-color: #bce2c5;
+        }
+        button{
+            padding: 10px 20px;
+            margin: 10px 5px;
+            border: 4px solid #ccc;
+            border-radius: 50px;
+            background-color: #4CAF50;
+            color: white;
+            font-size: 20px;
+        }
+        body{
+            background-color: #2a78c2;
+            font-family: Arial, sans-serif;
+            align-items: flex-end;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
     </style>
     <body>
+        <h1>Setmore Login</h1>
         <input type="text" placeholder="Enter your name">
+        <br>
         <input type="text" placeholder="Enter your email">
+        <br>
         <input type="number" placeholder="Enter your number">
+        <br>
         <button>Submit</button>
     </body>
 </html>
