--- a/login_form.html
+++ b/login_form.html
@@ -25,10 +25,11 @@
     body {
       background-color: #2a78c2;
       font-family: Arial, sans-serif;
-      align-items: flex-end;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
+    }
+    div{
+        align-items: center;
+        display: flex;
+        flex-direction: column;
     }
   </style>
   <body>
