--- a/login_form.html
+++ b/login_form.html
@@ -4,36 +4,9 @@
   <head>
     <title>Setmore Login</title>
   </head>
-  <style>
-    input {
-      width: 15%;
-      padding: 10px;
-      margin: 10px 5px;
-      border: 4px solid #ccc;
-      border-radius: 500px;
-      background-color: #bce2c5;
-    }
-    button {
-      padding: 10px 20px;
-      margin: 10px 5px;
-      border: 4px solid #ccc;
-      border-radius: 50px;
-      background-color: #4caf50;
-      color: white;
-      font-size: 20px;
-    }
-    body {
-      background-color: #2a78c2;
-      font-family: Arial, sans-serif;
-    }
-    div{
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-    }
-  </style>
+  <link rel="stylesheet" href="form.css" />
   <body>
-    <div>
+    <div class="login">
       <h1>Setmore Login</h1>
       <input type="text" placeholder="Enter your name" />
       <br />
