--- a/login_form.html
+++ b/login_form.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <title>Setmore Login</title>
@@ -8,12 +7,12 @@
   <body>
     <div class="login">
       <h1>Setmore Login</h1>
-      <input type="text" placeholder="Enter your name" />
-      <br />
-      <input type="text" placeholder="Enter your email" />
-      <br />
-      <input type="number" placeholder="Enter your number" />
-      <br />
+      <input type="text" placeholder="Enter your name">
+      <br>
+      <input type="text" placeholder="Enter your email">
+      <br>
+      <input type="number" placeholder="Enter your number">
+      <br>
       <button>Submit</button>
     </div>
   </body>
