feat: Added middle section and footer section

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <title>Static website</title>
     <link rel="stylesheet" type="text/css" href="landing.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
+    <header class="header_tag">
       <div class="nav_div">
         <p class="nav_text home">Home</p>
         <p class="nav_text about">About</p>
@@ -20,23 +23,111 @@
       </button>
     </header>
     <section class="design_image">
-        <image src="./designer_1.png" />
+      <image src="./designer_1.png" />
     </section>
     <div class="hero_content">
-        <div class="hero_content_title">
-            <p>Introduce Your Product Quickly & Effectively</p>
-        </div>
-        <div class="hero_content_body">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
-                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-        </div>
-        <button class="purchase_button">
-           <p>Purchase UI Kit</p>
-        </button>
-        <button class="learn_more_button">
-            <p>Learn More</p>
-        </button>
-
+      <div class="hero_content_title">
+        <p>Introduce Your Product Quickly & Effectively</p>
+      </div>
+      <div class="hero_content_body">
+        <p>
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+          commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
+          et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+          felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
+          consequat massa quis enim.
+        </p>
+      </div>
+      <button class="purchase_button">
+        <p>Purchase UI Kit</p>
+      </button>
+      <button class="learn_more_button">
+        <p>Learn More</p>
+      </button>
     </div>
+
+    <section class="feature_section">
+      <div class="feature_container">
+        <div class="feature_left_align">
+          <!-- Left side -->
+          <div class="first_section">
+            <h2>Light, Fast & Powerful</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+              Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
+              sem. Nulla consequat massa quis enim.
+            </p>
+          </div>
+          <div class="second_section">
+            <img src="Icon/Section/Icon.png" />
+            <h3 class="second_section_heading">Title Goes Here</h3>
+            <p class="second_section_para">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor.
+            </p>
+          </div>
+          <div class="second_section_two">
+            <img src="Icon/Section/Icon.png" />
+            <h3 class="second_section_heading">Title Goes Here</h3>
+            <p class="second_section_para">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor.
+            </p>
+          </div>
+        </div>
+        <div class="feature_right_align">
+          <img src="Icon/Section/undraw_mobile_login_ikmv.png">
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="footer_wrapper">
+        <div class="footer_first_line">
+          <p class="text-copyright">©2023 Yourcompany</p>
+        </div>
+        <h5 class="footer_landing">Landing</h5>
+        <button class="buy_button footer_button">
+          <p class="buy_button_text">Purchase now</p>
+        </button>
+        <div class="footer_border"></div>
+        <div class="footer_nav_container">
+          <nav class="footer_nav">
+            <ul>
+              <li>
+                <a href="#" class="">Home</a>
+              </li>
+              <li>
+                <a href="#" class="">About</a>
+              </li>
+              <li>
+                <a href="#" class="">Contact</a>
+              </li>
+            </ul>
+          </nav>
+          <nav class="footer_icon">
+            <ul>
+              <li>
+                <a href="#"><img src="Icon/Social/Facebook.png" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="Icon/Social/LinkedIn.png" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="Icon/Social/Twitter.png" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="Icon/Social/Youtube.png" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="Icon/Social/Instagram.png" /></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
