refactor: Optimized and reduced repeated css

--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
       </div>
       <p class="landing_para">Landing</p>
       <button class="buy_button">
-        <p class="buy_button_text">Buy Now</p>
+        <p class="buy_button_text custom-font-family custom_font_weight_500">
+          Buy Now
+        </p>
       </button>
     </header>
-    <section class="design_image">
-      <image src="./designer_1.png" />
+    <section class="hero_image">
+      <image src="Icon/designer_1.png" />
     </section>
     <div class="hero_content">
       <div class="hero_content_title">
         <p>Introduce Your Product Quickly & Effectively</p>
       </div>
       <div class="hero_content_body">
-        <p>
+        <p class="custom-font-family custom_font_weight_400">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
           commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
           et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
@@ -39,10 +41,10 @@
         </p>
       </div>
       <button class="purchase_button">
-        <p>Purchase UI Kit</p>
+        <p class="custom-font-family custom_font_weight_500">Purchase UI Kit</p>
       </button>
       <button class="learn_more_button">
-        <p>Learn More</p>
+        <p class="custom-font-family custom_font_weight_500">Learn More</p>
       </button>
     </div>
 
@@ -51,8 +53,10 @@
         <div class="feature_left_align">
           <!-- Left side -->
           <div class="first_section">
-            <h2>Light, Fast & Powerful</h2>
-            <p>
+            <h2 class="custom-font-family custom_font_weight_500">
+              Light, Fast & Powerful
+            </h2>
+            <p class="custom-font-family custom_font_weight_400">
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa. Cum sociis natoque
               penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -62,23 +66,35 @@
           </div>
           <div class="second_section">
             <img src="Icon/Section/Icon.png" />
-            <h3 class="second_section_heading">Title Goes Here</h3>
-            <p class="second_section_para">
+            <h3
+              class="second_section_heading custom-font-family custom_font_weight_500"
+            >
+              Title Goes Here
+            </h3>
+            <p
+              class="second_section_para custom-font-family custom_font_weight_400"
+            >
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor.
             </p>
           </div>
           <div class="second_section_two">
             <img src="Icon/Section/Icon.png" />
-            <h3 class="second_section_heading">Title Goes Here</h3>
-            <p class="second_section_para">
+            <h3
+              class="second_section_heading custom-font-family custom_font_weight_500"
+            >
+              Title Goes Here
+            </h3>
+            <p
+              class="second_section_para custom-font-family custom_font_weight_400"
+            >
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor.
             </p>
           </div>
         </div>
         <div class="feature_right_align">
-          <img src="Icon/Section/undraw_mobile_login_ikmv.png">
+          <img src="Icon/Section/undraw_mobile_login_ikmv.png" />
         </div>
       </div>
     </section>
@@ -86,11 +102,15 @@
     <footer>
       <div class="footer_wrapper">
         <div class="footer_first_line">
-          <p class="text-copyright">©2023 Yourcompany</p>
+          <p class="text-copyright custom-font-family custom_font_weight_400">
+            ©2023 Yourcompany
+          </p>
         </div>
-        <h5 class="footer_landing">Landing</h5>
+        <h5 class="footer_landing custom-font-family">Landing</h5>
         <button class="buy_button footer_button">
-          <p class="buy_button_text">Purchase now</p>
+          <p class="buy_button_text custom-font-family custom_font_weight_500">
+            Purchase now
+          </p>
         </button>
         <div class="footer_border"></div>
         <div class="footer_nav_container">
