--- a/index.html
+++ b/index.html
@@ -11,45 +11,52 @@
     />
   </head>
   <body>
-    <header class="header_tag">
-      <div class="nav_div">
-        <p class="nav_text home">Home</p>
-        <p class="nav_text about">About</p>
-        <p class="nav_text contact">Contact</p>
-      </div>
-      <p class="landing_para">Landing</p>
-      <button class="buy_button">
-        <p class="buy_button_text custom-font-family custom_font_weight_500">
-          Buy Now
-        </p>
-      </button>
-    </header>
-    <section class="hero_image">
-      <image src="Icon/designer_1.png" />
-    </section>
-    <div class="hero_content">
-      <div class="hero_content_title">
-        <p>Introduce Your Product Quickly & Effectively</p>
-      </div>
-      <div class="hero_content_body">
-        <p class="custom-font-family custom_font_weight_400">
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-          commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-          et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
-          felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
-          consequat massa quis enim.
-        </p>
-      </div>
-      <button class="purchase_button">
-        <p class="custom-font-family custom_font_weight_500">Purchase UI Kit</p>
-      </button>
-      <button class="learn_more_button">
-        <p class="custom-font-family custom_font_weight_500">Learn More</p>
-      </button>
-    </div>
+    <div class="container">
+      <header class="header_tag">
+        <nav class="nav_container">
+          <div class="nav_div">
+            <p class="custom-font-family custom_font_weight_400">Home</p>
+            <p class="custom-font-family custom_font_weight_400">About</p>
+            <p class="custom-font-family custom_font_weight_400">Contact</p>
+          </div>
+          <p class="landing_para custom-font-family">Landing</p>
+          <button
+            class="buy_button common_button buy_button_text custom-font-family custom_font_weight_500 common_button"
+          >
+            Buy Now
+          </button>
+        </nav>
+      </header>
 
-    <section class="feature_section">
-      <div class="feature_container">
+      <section class="hero_section">
+        <div class="hero_content_title">
+          <p class="custom_font_weight_500 custom-font-family">
+            Introduce Your Product Quickly & Effectively
+          </p>
+        </div>
+        <div class="hero_content_body">
+          <p class="custom-font-family custom_font_weight_400">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+            commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+            Nulla consequat massa quis enim.
+          </p>
+        </div>
+        <button
+          class="purchase_button custom-font-family custom_font_weight_500 common_button"
+        >
+          Purchase UI Kit
+        </button>
+        <button
+          class="learn_more_button common_button custom-font-family custom_font_weight_500"
+        >
+          Learn More
+        </button>
+        <img src="Icon/designer_1.png" />
+      </section>
+
+      <section class="feature_section">
         <div class="feature_left_align">
           <!-- Left side -->
           <div class="first_section">
@@ -59,95 +66,103 @@
             <p class="custom-font-family custom_font_weight_400">
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa. Cum sociis natoque
-              penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-              Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
-              sem. Nulla consequat massa quis enim.
+              penatibus et magnis dis parturient montes, nascetur ridiculus
+            </p>
+            <p class="custom-font-family custom_font_weight_400">
+              mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
+              quis, sem. Nulla consequat massa quis enim.
             </p>
           </div>
-          <div class="second_section">
-            <img src="Icon/Section/Icon.png" />
-            <h3
-              class="second_section_heading custom-font-family custom_font_weight_500"
-            >
-              Title Goes Here
-            </h3>
-            <p
-              class="second_section_para custom-font-family custom_font_weight_400"
-            >
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-              commodo ligula eget dolor.
-            </p>
-          </div>
-          <div class="second_section_two">
-            <img src="Icon/Section/Icon.png" />
-            <h3
-              class="second_section_heading custom-font-family custom_font_weight_500"
-            >
-              Title Goes Here
-            </h3>
-            <p
-              class="second_section_para custom-font-family custom_font_weight_400"
-            >
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-              commodo ligula eget dolor.
-            </p>
+          <div class="second_section_left">
+            <div class="second_section">
+              <img src="Icon/Section/Icon.png" />
+              <h3
+                class="second_section_heading custom-font-family custom_font_weight_500"
+              >
+                Title Goes Here
+              </h3>
+              <p
+                class="second_section_para custom-font-family custom_font_weight_400"
+              >
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="second_section second_section_two">
+              <img src="Icon/Section/Icon.png" />
+              <h3
+                class="second_section_heading custom-font-family custom_font_weight_500"
+              >
+                Title Goes Here
+              </h3>
+              <p
+                class="second_section_para custom-font-family custom_font_weight_400"
+              >
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
           </div>
         </div>
         <div class="feature_right_align">
           <img src="Icon/Section/undraw_mobile_login_ikmv.png" />
         </div>
-      </div>
-    </section>
+      </section>
 
-    <footer>
-      <div class="footer_wrapper">
-        <div class="footer_first_line">
-          <p class="text-copyright custom-font-family custom_font_weight_400">
-            ©2023 Yourcompany
-          </p>
-        </div>
-        <h5 class="footer_landing custom-font-family">Landing</h5>
-        <button class="buy_button footer_button">
-          <p class="buy_button_text custom-font-family custom_font_weight_500">
-            Purchase now
-          </p>
-        </button>
-        <div class="footer_border"></div>
-        <div class="footer_nav_container">
-          <nav class="footer_nav">
-            <ul>
-              <li>
-                <a href="#" class="">Home</a>
-              </li>
-              <li>
-                <a href="#" class="">About</a>
-              </li>
-              <li>
-                <a href="#" class="">Contact</a>
-              </li>
-            </ul>
+      <footer>
+        <div class="footer_wrapper">
+          <div class="footer_first_line container">
+            <p class="text-copyright custom-font-family custom_font_weight_400">
+              ©2023 Yourcompany
+            </p>
+            <h5
+              class="footer_landing custom-font-family custom_font_weight_500"
+            >
+              Landing
+            </h5>
+            <button
+              class="common_button footer_button buy_button_text custom-font-family custom_font_weight_500"
+            >
+              Purchase now
+            </button>
+          </div>
+          <div class="footer_border container"></div>
+          <nav class="footer_nav_container container">
+            <div class="footer_first custom-font-family custom_font_weight_400">
+              <ul>
+                <li>
+                  <a href="#" class="">Home</a>
+                </li>
+                <li>
+                  <a href="#" class="">About</a>
+                </li>
+                <li>
+                  <a href="#" class="">Contact</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer_second">
+              <ul>
+                <li>
+                  <a href="#"><img src="Icon/Social/Facebook.png" /></a>
+                </li>
+                <li>
+                  <a href="#"><img src="Icon/Social/LinkedIn.png" /></a>
+                </li>
+                <li>
+                  <a href="#"><img src="Icon/Social/Twitter.png" /></a>
+                </li>
+                <li>
+                  <a href="#"><img src="Icon/Social/Youtube.png" /></a>
+                </li>
+                <li>
+                  <a href="#"><img src="Icon/Social/Instagram.png" /></a>
+                </li>
+              </ul>
+            </div>
           </nav>
-          <nav class="footer_icon">
-            <ul>
-              <li>
-                <a href="#"><img src="Icon/Social/Facebook.png" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="Icon/Social/LinkedIn.png" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="Icon/Social/Twitter.png" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="Icon/Social/Youtube.png" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="Icon/Social/Instagram.png" /></a>
-              </li>
-            </ul>
-          </nav>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
